--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ importlib-metadata==1.7.0
 iniconfig==1.0.1
 joblib==0.17.0
 more-itertools==8.5.0
-numpy==1.19.2
+numpy==1.18.3
 packaging==20.4
 pandas==1.1.2
 pluggy==0.13.1
@@ -22,19 +22,19 @@ PyYAML==5.3.1
 requests==2.24.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
-six==1.15.0
+#six==1.15.0
 threadpoolctl==2.1.0
 toml==0.10.1
 urllib3==1.25.10
 #zipp==3.1.0
 apache-beam==2.23.0
 protobuf==3.12.4
-tfx-bsl==0.24.0
-tensorflow==2.3.0
+tfx-bsl==0.23.0
+tensorflow==2.3.1
 tensorflow-addons==0.11.2
 tensorflow-datasets==3.2.1
 tensorflow-estimator==2.3.0
-tensorflow-metadata==0.24.0
+tensorflow-metadata==0.23.0
 tensorflow-privacy==0.5.1
 tensorflow-probability==0.11.0
 tensorflow-serving-api==2.3.0
